crates/lex/src/tests/snapshots/string_basic.snap
---
source: crates/lex/src/tests.rs
assertion_line: 229
expression: "(test[1], tokens)"
---
- "\"mitral\""
- Ok:
    - tt:
        Str: mitral
      line: 1
      column: 1
    - tt:
        Semicolon: true
      line: 1
      column: 2

